{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "b9e3000b-9580-4c48-a09a-46cc610b555c",
            "actions": [
                {
                    "name": "MapAction",
                    "type": "Button",
                    "id": "bf9e302a-5ed5-443f-961f-b76d06048027",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DestinationAction",
                    "type": "Button",
                    "id": "5165e87e-ca80-4287-a581-d778a12b3e6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VendorAction",
                    "type": "Button",
                    "id": "c77ba536-ba37-4720-b6c2-7ad2bf48b941",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateLeftAction",
                    "type": "Button",
                    "id": "8371a986-0878-40f9-9a38-9abd7b2e4666",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRightAction",
                    "type": "Button",
                    "id": "e97ccd1b-c26e-42ee-a29b-c9ea259785cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MirrorAction",
                    "type": "Button",
                    "id": "de9add74-0f6a-465b-9efe-c982236e6eef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76abf253-d507-4f8b-b55e-afe144e533ee",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1deb3c13-b191-4808-b698-e8e0042da519",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DestinationAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e524889a-a7e9-4169-9d4b-7892ec7a392e",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VendorAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3752a89d-d7cc-412e-9ba3-1c84d96ceb3a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeftAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45551e56-a748-4cc1-870f-561828727c16",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRightAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "117cf013-f048-45dd-8c0e-e22892829d44",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MirrorAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}